--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "gh-pages": "^6.2.0",
     "vite": "^5.4.1"
   },
   "dependencies": {
