--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@splinetool/runtime": "^1.9.31",
-    "gsap": "^3.12.5"
+    "gsap": "^3.12.5",
+    "particles.js": "^2.0.0"
   }
 }
